# FaithType

./: Cargo.toml  Readme-ja.md  Readme-zh_cn.md  Readme-zh_tw.md  Readme.md
.github/workflows/: build.yml
scripts/: Auto-Patch-Then-Install.ps1  Auto-Uninstall.ps1  Install-Registry.ps1  Manual-Batch-Patch.ps1  Manual-Install-Registry.ps1  Uninstall-Registry.ps1
src/: arg_parser.rs  checksum.rs  main.rs  modify.rs  ttc_reader.rs  ttc_writer.rs  types.rs
tool/: convert_removing_hinting.sh
tools/: convert_removing_hinting.sh
