[package]
name = "faithtype"
version = "0.1.0"
authors = ["Star Brilliant <coder@poorlab.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.41"

# Optimize for size
[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'
